Modification de la présentation personnelle

--- a/portfolio-bts-sio/conception/charte-graphique/site/index.html
+++ b/portfolio-bts-sio/conception/charte-graphique/site/index.html
@@ -25,12 +25,14 @@
     </section>
     <section id="presentation">
         <h2>0. Présentation</h2>
-        <p>Je m'appelle Constant Foos, j’ai 24 ans et je suis passionné par l'informatique. Après plusieurs expériences professionnelles variées, 
-        notamment dans l'armée, je me tourne désormais vers le domaine des technologies pour contribuer à des projets informatiques et évoluer dans ce
-        secteur en pleine croissance. Je suis actuellement en formation en BTS SIO (Services Informatiques aux Organisations) à l’IFIDE Sup-Formation
-        à Eckbolsheim. <br> <br>
+        <p>Je m'appelle Constant Foos, j'ai 24 ans et je suis diplômé d'un BTS SIO (Services Informatiques aux Organisations), spécialité SISR (Solutions d'Infrastructure, Systèmes et Réseaux), obtenu à l'IFIDE Sup-Formation à Eckbolsheim. Cette formation m'a permis d'acquérir des compétences solides dans la gestion et la sécurisation des réseaux informatiques, ainsi que dans l'administration des infrastructures systèmes.
+        Mon expérience professionnelle dans l'armée m'a permis de développer une grande organisation, une forte capacité à gérer des situations complexes et imprévues, ainsi qu'une résilience face aux défis. Ces qualités, associées à mes compétences techniques, me permettent de travailler efficacement, même sous pression, et d'apporter des solutions fiables et adaptées aux besoins des entreprises.
+        Passionné par l'informatique et les technologies, je me spécialise dans la mise en place et la maintenance de systèmes d'information sécurisés. Mon objectif professionnel est de devenir administrateur systèmes et réseaux ou technicien en cybersécurité, deux métiers qui me permettent de contribuer activement à la fiabilité et à la performance des infrastructures informatiques des organisations.
+        Fort de mon expérience en projets réalisés durant ma formation, je suis capable de gérer des environnements complexes et de travailler efficacement sur des problématiques comme la gestion des infrastructures réseau, le déploiement de solutions sécurisées ou encore l'assistance technique avancée.
+        Je suis également ouvert à l'idée de continuer à me former dans des domaines tels que la cybersécurité avancée, l'automatisation des infrastructures ou le cloud computing, afin de rester à la pointe des évolutions technologiques.
+        Que ce soit en tant que salarié dans une entreprise ou en tant que consultant indépendant, je suis déterminé à mettre à profit mes compétences techniques et humaines pour répondre aux défis numériques des organisations. <br> <br></p>
         Présentation du BTS SIO
-        Le BTS Services Informatiques aux Organisations (SIO) forme en deux ans des professionnels compétents pour répondre aux besoins en informatique 
+        <p>Le BTS Services Informatiques aux Organisations (SIO) forme en deux ans des professionnels compétents pour répondre aux besoins en informatique 
         des entreprises. Il s'adresse à ceux souhaitant devenir administrateurs réseau, développeurs ou techniciens spécialisés. La formation offre deux options permettant de se spécialiser selon les centres d'intérêt et les objectifs professionnels :
 
         Option SISR (Solutions d'Infrastructure, Systèmes et Réseaux) : destinée à former des spécialistes en gestion, administration et 
@@ -88,7 +90,6 @@
     <section id="contact">
         <h2>4. Contact</h2>
         <p>Mail: constant.foos@hotmail.com</p>
-        <p>Skyblog: C@ston</p>
     </section>
 </body>
 </html>
