Correction faute orthographe

--- a/portfolio-bts-sio/conception/charte-graphique/site/index.html
+++ b/portfolio-bts-sio/conception/charte-graphique/site/index.html
@@ -19,7 +19,7 @@
             <a href="">Ma mission</a>
             <a href="">Couleurs</a>
             <a href="">Typographie</a>
-            <a href="">Contact</a>
+            <a href="">Contacts</a>
         </ul>
     </section>
     <section id="right">
